--- a/froooty/app/public/locales/en/translations.json
+++ b/froooty/app/public/locales/en/translations.json
@@ -76,6 +76,7 @@
     "fields": {
         "id": "Id",
         "email": "Email",
+        "avatar": "Avatar",
         "name": "Name",
         "surname": "Surname",
         "password": "Password",
